--- a/plusesAndMinuses.html
+++ b/plusesAndMinuses.html
@@ -4,7 +4,13 @@
     <title>Pluses and Minuses</title>
   </head>
 
-  <body>
+  <body style="display: flex; height: 100%; width: 100%; margin: 0px; justify-content: center; align-items: center;">
     <!-- Your HTML here -->
+    <div style="display: flex; margin-top: 100px; width: 250px; height: 150px; background-color: antiquewhite; justify-content: space-evenly; align-items: center;">
+      <button id="addButton" onclick="addCount()" style="padding: 7px 0px; width: 50px">+</button>
+      <div id="count"></div>
+      <button id="substractCount" onclick="substractCount()" style="padding: 7px 0px; width: 50px">-</button>
+    </div>
+    <script src="plusesAndMinuses.js"></script>
   </body>
 </html>
