--- a/toDoList.html
+++ b/toDoList.html
@@ -12,6 +12,14 @@
           <span>Reading</span>
           <a class="delete">Delete</a>
         </li>
+        <li>
+          <span>Writing</span>
+          <a class="delete">Delete</a>
+        </li>
+        <li>
+          <span>WorkOut</span>
+          <a class="delete">Delete</a>
+        </li>
       </ul>
       <div class="add"><input type="text" /> <a class="add-item">Add</a></div>
     </main>
